Crates/simulatron-salt/src/lib/snapshots/simulatron_salt__ast__tests__instructions-3.snap
---
source: src/lib/ast.rs
expression: "instruction.operands().iter().map(Operand::value).map(Result::unwrap).collect::<Vec<_>>()"

---
[
    Ident(
        "r0",
    ),
    Ident(
        "COL",
    ),
]
