Crates/simulatron-salt/src/lib/snapshots/simulatron_salt__ast__tests__instructions-5.snap
---
source: simulatron-salt/src/lib/ast.rs
expression: "instruction.operands().iter().map(Operand::value).map(Result::unwrap).collect::<Vec<_>>()"

---
[
    Lit(
        Sizeof {
            ident: "greeting",
        },
    ),
    Ident(
        "r0",
    ),
    Ident(
        "greeting",
    ),
]
