Crates/simulatron-salt/src/lib/snapshots/simulatron_salt__ast__tests__instructions-6.snap
---
source: src/lib/ast.rs
expression: "instruction.operands().iter().map(Operand::value).map(Result::unwrap).collect::<Vec<_>>()"

---
[]
